Configure Travis CI to report code coverage to Coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ elixir:
   - 1.6.0
 otp_release:
   - 20.0 
+script:
+  - "MIX_ENV=test mix do deps.get, test && mix compile && mix coveralls.travis"
